# devlog

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 4d6dde3f7ba6_initial_schema.py  b4a782b6a81e_add_users_and_user_id.py
devlog/: cli.py  db.py  models.py  schemas.py
devlog/api/: auth.py  cache.py  deps.py  jobs.py  limiter.py  main.py
devlog/api/routes/: auth.py  sessions.py  tags.py
devlog/commands/: export.py  list_sessions.py  report.py  resume.py  start.py  stop.py  summary.py  tag.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  api.ts  main.tsx  types.ts
frontend/src/components/: ActivityChart.tsx  AuthForm.tsx  SessionList.tsx  StartSession.tsx  StatsPanel.tsx
tests/: test_api.py  test_cli.py
