[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devlog"
version = "0.1.0"
description = "A developer activity tracker CLI"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1",
    "sqlalchemy>=2.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "anthropic>=0.40",
    "slowapi>=0.1.9",
    "redis>=5.0",
    "bcrypt>=4.0",
    "python-jose[cryptography]>=3.3",
    "pydantic[email]>=2.0",
]

[project.scripts]
devlog = "devlog.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["devlog*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "httpx>=0.27",
]
